<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_link_activity"
    tools:context=".AddLinkActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_edit_text"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_link"
            android:hint="Paste URL" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/preview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preview"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout"
        app:layout_constraintVertical_bias="1.0" />

    <com.freesoulapps.preview.android.Preview
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <TextView
        android:id="@+id/preview_placeholder_text_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:gravity="center"
        android:text="Preview"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <TextView
        android:id="@+id/enterCatTextView"
        android:layout_width="356dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="Enter a Category"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/categoryACTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/categoryACTextView"
        app:layout_constraintTop_toBottomOf="@+id/preview_placeholder_text_view" />

    <AutoCompleteTextView
        android:id="@+id/categoryACTextView"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="default: No Category"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/preview_view"
        app:layout_constraintStart_toStartOf="@+id/preview_view"
        app:layout_constraintTop_toBottomOf="@+id/enterCatTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>



