<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_link"
        android:title="Save Link"
        android:icon="@drawable/ic_check"
        android:orderInCategory="40"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/qr_reader"
        android:title="QR Reader"
        android:icon="@drawable/ic_qr"
        android:orderInCategory="10"
        app:showAsAction="ifRoom">

    </item>




</menu>